--- a/课程/工程导论.md
+++ b/课程/工程导论.md
@@ -12,3 +12,34 @@
 - 政治
 - 经济
 - 发明、设计
+
+### MIT对工程的定义
+> 一种有创造性的专业，它使用科学技术来解决社会问题，同时满足物理，经济，法律，政治，道德，文化和环境的限制。
+
+- 科学：系统化的知识
+- 技术：知识的综合与实际应用
+
+---
+
+## 工程的过程
+### 工程曲线
+  - 浴盆曲线：关于故障率
+  - S形曲线：关于增长率
+
+### 工程环节
+  - 设计->制造->服务
+
+### 生产方式发展变迁
+  - 手工生产
+  - 大规模生产
+  - 精益生产
+
+### 工程设计
+  > 设计：想办法解决处理问题
+
+### 知识视角的工程范畴
+
+### 小作业
+  - A：分享一个领域
+  - B：分享了解的工程师（性格、特质）
+  
