--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -51,7 +51,7 @@
 ---
 
 <a id = 1.1></a>
-## 秘密共享（复看本节）  
+## 秘密共享（复记本节）  
 疑问：一把只有插入三把钥匙才能开的锁？  
 规则：  
 
@@ -76,14 +76,148 @@
 
 求解方法：待记  
 
-中国剩余定理：$一次同余方程组x \equiv a_j (mod m_j), i<j<k 的非负整数解是唯一的$  
+中国剩余定理：$一次同余方程组x \equiv a_j (mod\ m_j), i<j<k 的非负整数解是唯一的$  
 ### Asmuth-Bloom门限机制  
 [参考链接：基于中国剩余定理的秘密共享](https://www.jianshu.com/p/575102bb965b)  
 
 ---
 
+## PageRank（复看）
+> 建模的过程、建模与求解的统一  
 
+### 排序机制——网页重要度的原则与假设
+> 网页通过超链接连接，网页重要程度由网络间的链接关系决定
+
+- 某网页重要，是因为有重要的网页链接到它
+  - 对任一网页A，确定一数值，作为其重要度
+  - 链接到A的所有网页对A的重要度有贡献，贡献值与其重要度有关
+- 传递性：链接到A的网页B，其重要度也会对A有贡献
+  - 某网页对其他网页重要度贡献之和等于他的重要度
+- 等效性：网页对其连接的网页的重要度贡献相同
+- 叠加性：网页的重要度等于其他网页对其的重要度贡献之和
+- 无关性：网页链接到其他网页的数量不影响其重要度
+
+### 网页重要度
+  - 网络链接图
+    1. 顶点：网页$v_1,v_2\dots v_n$
+     2. 弧：网页间的链接
+    2. 出度：网页的出链数量
+
+  - 网页重要度
+    - 若链接到网页$v_i$的网页有$v_{j1},v_{j2},\dots v_{jn}$，则$v_i$的重要度为：$x_j = \sum{_i} \frac{x_{ji}}{q_{ji}}=\sum \limits _{j=1}^n p_{ij}x_j$
+    - 矩阵表示
+      - 令$p_{ij} = \frac{1}{q_j}$（若有链接自$v_j$向$v_i$）,否则$p_{ij} = 0$（一个网页的贡献排成一列）
+      - 即矩阵$P = (p_{ij})_{n \times n}$为链接矩阵，X为网页重要度向量
+      - X为线性方程组X=PX的解
+        - 有解性的证明：矩阵I-P的每一列之和为0，故可得每一行线性相关，故有解
+
+  - 随机矩阵
+    - 特点：各行（列）元素之和均为1的非负方阵
+    - 性质：
+      - 模最大的特征值为1
+
+  - 不链接的网页（悬挂网页）的处理
+    - 将对应列中所有元素改为$\frac{1}{n}$
+    - 看作原始矩阵加上修正矩阵：$\bar{P}=P+\frac{1}{n}ed^T$
+
+  - 特征值的特征向量唯一的修正（复记）
+    - 将$\bar{P}$修改为$\bar{\bar{P}} = \alpha \bar{P}+(1-\alpha)ee^T$
+    - 称
+    - 证明：
+
+### PageRank的数学基础
+  - Parron-Frobenius定理：
+    - 不可约矩阵
+      - 置换矩阵：若干个初等对换矩阵的乘积
+        - 置换矩阵每行每列都恰有一个元素为1，其余元素为0
+      - 若存在置换矩阵Q，使得
+    - 不可约矩阵与有向图
+      - 若对有向图中任意有序顶点对$v_i,v_j$（ij可相等），存在一条从$v_i$到$v_j$的有向路（无需双向），则称有向图是强联通
+的
+  
+    - 若A为非负不可约矩阵，则
+
+### PageRank的计算实现
+  - 幂法：计算矩阵模最大特征值及其对应特征向量
+    1. 任取初始向量$x^{0},x^{0}>0且e^Tx^{0}=1$（即$x^0$的各项之和为1）
+    2. 计算$x^{k}=Px^{k-1}，即x^{k}=P^{k}x^{0}$ （迭代后的各项之和仍为1） 
+      > 对于链接矩阵$\bar{\bar{P}}$来说，先把它拆分（根据之前的关系），再进行幂法迭代，最后再乘上$\frac{1}{n}$，以简化计算
+
+### 随机浏览模型
+  - 假设：用户在任一网页上有$\alpha$的概率继续浏览当前网页，有$1-\alpha$的概率随机跳转到其他网页  
+  > 经过Page的调查，$\alpha$的取值约为$\frac{5}{6}$，近似为0.85
+  - 从任一网页开始，充分长时间后，访问各网页的概率即为网页重要度
+  - 极限概率：即事件$\{ X_m = j \}$为时刻m访问网页j，则$P\{X_m = i\ |X_{m-1}=j\}=p_{ij}$
+  - 复记
+
+### 马尔科夫过程
+  > 在已知目前状态条件下，未来演变不依赖于其以往的演变
 
 ---
 
+## 数论及组合数学（复记）
+### 安全状态与不安全状态
+  - 若无论对方如何去均不会获胜，则称为安全状态（对己方）
+  - 若存在一种方式，对方可以获胜，则称为不安全状态（对己方）
+  - 若无论对方如何取，己方下一次取法均能使其进入安全状态，则称为安全状态（对己方）
+  - 若对方至少存在一种取法，己方下一次取无法变为一个安全状态的状态也是不安全的
 
+### NIM游戏与二进制
+  - 二进制与位和  
+    - 1
+
+---
+
+## 随机模型
+### 疾病监测
+  - 灵敏度：患者被检测为阳性的概率
+  - 特异度：健康人被检测为阴性的概率
+
+### Monty Hall问题
+
+### 数学期望
+  - 期望：期望的和等于和的期望
+  - 几何分布的期望：$\frac{1}{p}$
+
+### 赌徒破产问题
+
+---
+
+## 面试问题
+### 动态规划
+  
+---
+
+## 差分方程
+
+---
+
+## 种群增长模型
+### 离散单种群模型
+#### 1.假设
+  - 只由一个世代组成，相继世代之间没有重叠
+  - 第n代个体数量满足$x_{n+1} = f(x_n)$
+#### 2.增长模型
+  - 离散指数增长模型
+    - $x_{n+1} = rx_n$
+    - $x_n = x_0\cdot r^n$
+
+### 混沌
+- Li-Yorke定理：若映射$f$有一个3周期点，那么$f$是混沌的
+
+### 连续单种群模型
+
+---
+
+## 生物数学模型
+### 传染病--SIR模型
+> 现阶段大多数基于SIR模型  
+
+#### 1.模型假设
+  - 人口总数为N，且总是保持不变
+  - 人口分为三类
+    - 易感者S：易受感染
+    - 感染者I：易感染，且可感染别人
+    - 移除者R：曾被感染，但不会感染别人
+  - 接触与移出：
+    - 感染
