--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -221,3 +221,10 @@
     - 移除者R：曾被感染，但不会感染别人
   - 接触与移出：
     - 感染
+
+### Ross 疟疾传播模型
+#### 1.模型假设
+  - 某一区域内人的数量H与蚊子的数量V保持不变
+  - 记t时刻人群中易感者和感染值的数量分别为$S_h(t)$
+
+### Lotka-Volterra模型
