--- a/关于本站.md
+++ b/关于本站.md
@@ -4,3 +4,6 @@
 > 参考链接：[MkDocs-Github-Readthedocs](https://zj-sphinx-github-readthedocs.readthedocs.io/en/latest/mkdocs/%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6%E8%A7%A3%E6%9E%90/)
 
 - 2023.11.04 完成启动和github部署自动化
+
+## 接下来的建设
+- [Material for Mkdocs](https://squidfunk.github.io/mkdocs-material/)
