--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -228,3 +228,27 @@
   - 记t时刻人群中易感者和感染值的数量分别为$S_h(t)$
 
 ### Lotka-Volterra模型
+
+---
+
+## 数学规划
+
+### 运筹学
+  #### 1.分支
+  - 数学规划
+    - 线性规划
+    - 非线性规划
+    - 整数规划
+    - 多目标规划
+  - 组合优化
+  - 随机运筹
+    - 排队论
+    - 库存论
+    - 可靠性理论
+  - 博弈论与决策理论
+  #### 研究内容
+  - 优化理论
+  - 应用问题
+  - 实际案例
+
+### 食谱问题
