--- a/About/关于本站.md
+++ b/About/关于本站.md
@@ -8,3 +8,4 @@
 ## 接下来的建设
 - [Material for Mkdocs](https://squidfunk.github.io/mkdocs-material/)
 - [MDUI文档](https://www.mdui.org/docs/color)
+- [Pymarkdown文档](https://wohugb.github.io/pymdown-extensions/)
