--- a/About/友情链接.md
+++ b/About/友情链接.md
@@ -19,7 +19,8 @@
 
 [HobbitQia的笔记本](https://note.hobbitqia.cc/)  
 [Bowling's TechStack](https://note.bowling233.top/)  
-[鹤翔万里的笔记本](https://note.tonycrane.cc/)--某位大佬的Mkdocs魔改，可以借鉴一下
+[鹤翔万里的笔记本](https://note.tonycrane.cc/)--某位大佬的Mkdocs魔改，可以借鉴一下  
 [Isshiki修's Notebook](https://note.isshikih.top/)  
+[咸鱼暄](https://xuan-insr.github.io/)  
 
 顺藤摸瓜，一挖挖一堆，大丰收![ac06](.\AC娘表情包\ac06.gif)
