--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -252,3 +252,50 @@
   - 实际案例
 
 ### 食谱问题
+
+### 下料问题
+==0-1变量的使用==
+- 决策变量
+  - $x_{ji}$：第j种钢管截取的第i种短管数量
+
+- 约束条件
+  - $\sum \limits_{i= 1}^{k} x_{ji}w_i \leq W$
+  - $\sum \limits_{i= 1}^{n} x_{ji} \geq b_i$
+
+### 选址问题 -- 二维情形
+ 
+ > 思想：将二次约束变为一次约束
+
+### 常用的一些处理
+- 0-1变量的使用
+  设
+  $$
+  x_i = j \Rightarrow x_{ij} = \left\{
+  \begin{aligned}
+  1, &\quad x_i = j \\
+  0, &\quad x_i \neq j
+  \end{aligned}
+  \right.
+  $$
+
+  累计的处理：$\sum\limits_{i = 1}^{m}\sum\limits_{j = 1}^{n} jx_{ij}$
+
+### 赛程编制
+
+### 支持向量机SVM
+#### 超平面：$\mathbf{w\cdot x} + b = 0$
+  - 距离：$\frac{|\mathbf{w\cdot x} + b|}{||\mathbf{w}||}$
+
+
+### 线性规划求解  
+#### 线性规划的矩阵形式
+  - 目标函数：$min\quad \mathbf{c^Tx}$
+  - 约束条件：$\mathbf{Ax} = \mathbf{b}$
+  - 非负约束：$\mathbf{x} \geq 0$  
+##### 标准型：
+  - 目标函数：极小化
+  - 约束条件：等式约束
+  - 非负约束：$\mathbf{x} \geq 0$
+  - 等式约束右端均为非负常数
+
+### 整数线性规划
