--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -298,4 +298,42 @@
   - 非负约束：$\mathbf{x} \geq 0$
   - 等式约束右端均为非负常数
 
-### 整数线性规划
+### 整数线性规划 -- 分枝定界法（以最小值为例）
+> 不断拆分区域，直到线性规划的最优解在整数处解得（如果我们不断拆分，最后一定会把整个区域分成一个个整数点）
+
+- 分枝：以非整数解为基础将区域划分
+- 定解：对于每块区域，求它的非整数型规划
+- 剪枝：去掉不可能为最优解的区域（最小值比已有整数解处的要大）和LP的解为整数的情况
+
+### 多目标规划
+#### 解的类型
+- 绝对最优解（不一定存在）
+  - 在所有方面都是最好的
+- Pareto最优解
+  - 找不到每一个方面都比它好的解（即在某一方面时最好的（且不是并列的））
+- 弱Pareto最优解（不常用）
+  - 找不到每一个方面都严格比他好的解（即在某一方面时最好的（可以并列））
+
+#### 求解
+1. 线性加权和法
+> 将多目标规划转化为单目标规划，计算$min \sum \limits_{k=1}^{p}\lambda _kf_k(x)$
+
+- 求得结果为Pareto最优解
+2. 主要目标法
+> 将多目标规划转化为单目标规划，计算$min \ f_k(x)，满足f_i(x)<u_i(i\neq k$
+
+- 求得结果为弱Pareto最优解
+
+3. 理想点法
+4. 分层排序法
+> 在最重要的目标上求最优解，然后在次重要的目标上求最优解，以此类推
+- 求得结果为Pareto最优解
+
+### 投资组合问题
+> 如何使收益最大，风险最小？
+
+???+ info
+    如何使收益最大，风险最小？
+
+#### 定义
+- 风险：投资组合的收益率的方差
