--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -307,27 +307,32 @@
 
 ### 多目标规划
 #### 解的类型
-- 绝对最优解（不一定存在）
-  - 在所有方面都是最好的
-- Pareto最优解
-  - 找不到每一个方面都比它好的解（即在某一方面时最好的（且不是并列的））
-- 弱Pareto最优解（不常用）
-  - 找不到每一个方面都严格比他好的解（即在某一方面时最好的（可以并列））
+  - 绝对最优解（不一定存在）
+    - 在所有方面都是最好的
+  - Pareto最优解
+    - 找不到每一个方面都比它好的解（即在某一方面时最好的（且不是并列的））
+  - 弱Pareto最优解（不常用）
+    - 找不到每一个方面都严格比他好的解（即在某一方面时最好的（可以并列））
 
 #### 求解
-1. 线性加权和法
-> 将多目标规划转化为单目标规划，计算$min \sum \limits_{k=1}^{p}\lambda _kf_k(x)$
+  1. 线性加权和法
+   
+    > 将多目标规划转化为单目标规划，计算$min \sum \limits_{k=1}^{p}\lambda _kf_k(x)$
 
-- 求得结果为Pareto最优解
-2. 主要目标法
-> 将多目标规划转化为单目标规划，计算$min \ f_k(x)，满足f_i(x)<u_i(i\neq k$
+    - 求得结果为Pareto最优解
+  
+  2. 主要目标法
+   
+    > 将多目标规划转化为单目标规划，计算$min \ f_k(x)，满足f_i(x)<u_i(i\neq k$
 
-- 求得结果为弱Pareto最优解
+    - 求得结果为弱Pareto最优解
 
-3. 理想点法
-4. 分层排序法
-> 在最重要的目标上求最优解，然后在次重要的目标上求最优解，以此类推
-- 求得结果为Pareto最优解
+  3. 理想点法
+  4. 分层排序法
+
+    > 在最重要的目标上求最优解，然后在次重要的目标上求最优解，以此类推
+
+    - 求得结果为Pareto最优解
 
 ### 投资组合问题
 > 如何使收益最大，风险最小？
@@ -337,3 +342,34 @@
 
 #### 定义
 - 风险：投资组合的收益率的方差
+
+---
+
+## 组合优化
+
+> 从离散的对象集合中选取一个或多个对象，使得满足一定的约束条件，使得某种指标达到最优
+
+### P问题与NP问题
+#### P问题
+  - 有（确定性）多项式时间内算法的问题
+
+#### NP问题
+  - 有非确定性多项式时间内算法的问题
+  - 证明：多项式时间内可验证某个解是不是最优解（现实中不存在）
+  - 一个例子：Hamilton回路
+  
+    > 是否存在一条路径，经过每个顶点一次且仅一次
+
+    对于这个问题，我们可以很容易地验证一个解是否是满足条件，但是我们却很难找到这样的解
+
+#### NP完全问题
+  - 定义
+    - 一个问题是NP问题
+    - 所有NP问题都可以归约为它（解决了它，就能以多项式时间解决所有NP问题）
+
+#### NP-Hard问题
+  - 定义
+    - 所有NP问题都可以归约为它（不一定是NP问题）
+
+![](https://pic1.zhimg.com/80/v2-ebd7196e68af4f277e4b55c2f0ddb768_1440w.webp)
+<center>P和NP问题</center>
