--- a/About/友情链接.md
+++ b/About/友情链接.md
@@ -1,26 +1,22 @@
 ## 友情链接(?) 
 [ZJU CS - All Sum in One!](https://isshikihugh.github.io/zju-cs-asio/)
 
-22级
+???+ 22级  
+    [TH讠NK 的博客](https://www.luogu.com.cn/blog/chen031029/)  
+    [Jiepeng's notes](https://jiepenglab.github.io/notebook/)  
+    [cyc's notebook](https://cyc-987.github.io/)  
+    [Tsum's blog](https://tsumgo.github.io/)  
+    [Kimi's Blog](https://1kilometre.github.io/)  
+    [xymm's Notebook](https://xymmsnotebook.gitbook.io/noteofxymm/)  
 
-[TH讠NK 的博客](https://www.luogu.com.cn/blog/chen031029/)  
-[Jiepeng's notes](https://jiepenglab.github.io/notebook/)  
-[cyc's notebook](https://cyc-987.github.io/)  
-[Tsum's blog](https://tsumgo.github.io/)  
-[Kimi's Blog](https://1kilometre.github.io/)  
-[xymm's Notebook](https://xymmsnotebook.gitbook.io/noteofxymm/)  
+???+ info "21级"  
+    [Paradox's Website](https://zju-paradox.top/)  
+    [KLBB的小窝](https://zjuklbb.top/)  
 
-21级
+???+ tip "似乎是校内其他同学"  
+    [HobbitQia的笔记本](https://note.hobbitqia.cc/)  
+    [Bowling's TechStack](https://note.bowling233.top/)  
+    [鹤翔万里的笔记本](https://note.tonycrane.cc/)--某位大佬的Mkdocs魔改，可以借鉴一下  
+    [Isshiki修's Notebook](https://note.isshikih.top/)  
+    [咸鱼暄](https://xuan-insr.github.io/)  
 
-[Paradox's Website](https://zju-paradox.top/)  
-[KLBB的小窝](https://zjuklbb.top/)  
-
-似乎是校内其他同学
-
-[HobbitQia的笔记本](https://note.hobbitqia.cc/)  
-[Bowling's TechStack](https://note.bowling233.top/)  
-[鹤翔万里的笔记本](https://note.tonycrane.cc/)--某位大佬的Mkdocs魔改，可以借鉴一下  
-[Isshiki修's Notebook](https://note.isshikih.top/)  
-[咸鱼暄](https://xuan-insr.github.io/)  
-
-顺藤摸瓜，一挖挖一堆，大丰收![ac06](.\AC娘表情包\ac06.gif)
