--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -17,6 +17,8 @@
 - 研究性作业
 - 课程论文（小组）
 - 期末开卷考试
+  - 微积分、线代、概率论等等建模（大部分到建模为止）
+  - 优化部分（动态规划，组合优化，线性规划，博弈论）
 
 <a id = 0.2></a>
 ## 数学基础与数学软件
@@ -373,3 +375,20 @@
 
 ![](https://pic1.zhimg.com/80/v2-ebd7196e68af4f277e4b55c2f0ddb768_1440w.webp)
 <center>P和NP问题</center>
+
+### 贪心
+
+> 每一步都选择当前最优的可行解，但最终得到的结果不一定是最优解，需要额外证明
+
+#### 场馆安排问题
+- 以结束时间从小到大的顺序排序
+
+### 动态规划问题
+
+### 启发式算法
+
+### 近似算法
+
+--- 
+
+## 图论
