--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -5,4 +5,8 @@
 翻了翻往年学长的经历，其中14级李鹏飞学长的经历似乎值得了解  
 > 本科专业：电气自动化 去向：约翰霍普金斯 方向：Robotics
 
-暂时的一个决定：放弃e志，考虑机协，完成工高的任务和课业内容，视情况看看春纳
+### 未来的一些计划？
+#### 寒假
+- ML-4360 计算机视觉需要学一下，之后打比赛需要用到
+- 确定好专业方向，联系实验室
+  
