--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -392,3 +392,31 @@
 --- 
 
 ## 图论
+
+### 概念
+  - 迹：经过边不相同的途径
+  - 路：经过顶点不相同的途径
+    - $路\in迹$
+  - 二部图：顶点可分为两个集合，每条边的两个顶点分别属于不同的集合
+    - G为二部图的充要条件：G中不含奇数环（奇数条边构成的环）
+  - 子图
+    - 生成子图：删去一些边
+    - 导出子图：删去一些点，以及与这些点相关的边
+
+### 最小生成树
+#### Krukal算法
+  - 思想：从小到大加入边，若不构成环，则加入（贪心）
+
+### 最短路
+
+### 特殊顶点集
+  - 顶点覆盖：顶点集中的每条边至少有一个端点在集合中（可有混日子的，去掉也是独立集）
+  - 独立集：顶点集中的任意两个顶点都不相邻
+  - 支配集：顶点集中的每个顶点或者在集合中，或者与集合中的某个顶点相邻
+  - 团：团中的任意两个顶点都相邻
+
+### 匹配
+  - 定义：图G的一个匹配是G的一个边集，其中任意两条边都不相邻
+  - 最大匹配：边数最多的匹配
+  - 完美匹配：所有顶点都和匹配中的某条边相关联
+  - 最大权匹配：权值和最大的匹配
