--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -6,6 +6,9 @@
 > 本科专业：电气自动化 去向：约翰霍普金斯 方向：Robotics
 
 ### 未来的一些计划？
+
+> 大致路线：以电气为基础，学计算机相关的内容（不妨...以机器人为导向？）
+
 #### 寒假
 - ML-4360 计算机视觉需要学一下，之后打比赛需要用到
 - 确定好专业方向，联系实验室
