--- a/About/友情链接.md
+++ b/About/友情链接.md
@@ -9,9 +9,11 @@
     [Kimi's Blog](https://1kilometre.github.io/)  
     [xymm's Notebook](https://xymmsnotebook.gitbook.io/noteofxymm/)  
 
-???+ info "21级"  
+???+ info "往届"  
     [Paradox's Website](https://zju-paradox.top/)  
     [KLBB的小窝](https://zjuklbb.top/)  
+    [周晨旭学长](https://zicx.top/home/)  
+    [学长的「论文阅读和科研探索 (CV)」课程资料](https://zicx.top/learning_cv/slides/site/2023-fall-pbfx/#/)  
 
 ???+ tip "似乎是校内其他同学"  
     [HobbitQia的笔记本](https://note.hobbitqia.cc/)  
