--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -420,3 +420,33 @@
   - 最大匹配：边数最多的匹配
   - 完美匹配：所有顶点都和匹配中的某条边相关联
   - 最大权匹配：权值和最大的匹配
+
+### 选址问题
+
+### 着色
+图G的k着色：用k种颜色对图G的顶点进行着色，使得任意两个相邻的顶点着不同的颜色，等价于将图的顶点集划分为k个两两不相交的独立集之并  
+最小k值成为图的色数，记为$\chi(G)$
+
+### 网络流
+#### 定义
+  - 网络：有向图，每条边都有一个容量c(a)
+  - 流：从源点到汇点的路径，每条边的流量不超过容量
+  - 最大流：流量最大的流
+  - 割：将网络分为两个集合，源点在一个集合，汇点在另一个集合
+  - 最小割：割中流量最小的割
+#### 最小费用流
+  - 给定每个顶点的平衡量，给出最小费用流
+
+#### 最大流最小割定理
+  - 最大流的值等于最小割的值
+--- 
+
+## 分享部分
+### 范数
+  - p范数：$||x||_p = (\sum \limits_{i=1}^{n}|x_i|^p)^{\frac{1}{p}}$
+  - 无穷范数（最大）：max\{|x_i|\}
+  - 对偶范数：$||x||_q = (\sum \limits_{i=1}^{n}|x_i|^q)^{\frac{1}{q}},\frac{1}{p}+\frac{1}{q} =1$
+
+### 凸优化
+  - 凸集：对于集合中任意两点，连接这两点的线段仍在集合内
+  - 凸函数：对于函数上任意两点，连接这两点的线段在函数图像上方
