--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -13,3 +13,7 @@
 - ML-4360 计算机视觉需要学一下，之后打比赛需要用到
 - 确定好专业方向，联系实验室
   
+### 资料网站
+[未央书院学习资料共享计划2.0](https://weyoung-learn.github.io/)  
+[酒井科协暑培 4.0：贵系漫游指南](https://summer23.net9.org/)  
+[SAST skill docs](https://docs.net9.org/notes/reader/)  
