--- a/课程/数学建模.md
+++ b/课程/数学建模.md
@@ -416,7 +416,7 @@
   - 团：团中的任意两个顶点都相邻
 
 ### 匹配
-  - 定义：图G的一个匹配是G的一个边集，其中任意两条边都不相邻
+  - 定义：图G的一个匹配是G的一个边集(边的集合)，其中任意两条边都不相邻(连在同两点上)
   - 最大匹配：边数最多的匹配
   - 完美匹配：所有顶点都和匹配中的某条边相关联
   - 最大权匹配：权值和最大的匹配
@@ -439,7 +439,29 @@
 
 #### 最大流最小割定理
   - 最大流的值等于最小割的值
+
+### 黑白易位
+  - 连通的正则图（每个点只连两条边）就是一个圈
 --- 
+## 博弈论
+### 纳什均衡
+- 如何求nash均衡
+  - 最优定价映射的交点
+### 矩阵博弈
+- 要求：零和博弈
+
+### Cournot模型
+- 静态博弈，两家厂商同时决策
+
+### Stackelberg模型
+- 动态博弈，两家厂商依次决策
+
+### 稳定婚姻问题
+- 男女双方各自排名，男方优先选择，女方后选择，男方选择后，女方可以选择留在原来的对象，或者选择新的对象，直到所有人都不再变动
+#### 男士选择，女士决定
+
+### 讨价还价
+---
 
 ## 分享部分
 ### 范数
