--- a/课程/中国美术史.md
+++ b/课程/中国美术史.md
@@ -1,14 +1,274 @@
-## 第一节
-中国传统绘画常以线条来表现
-## 第二节
-花山岩画
+## 第一节：总论
+### 中国话的基本特征
+- 绘画风格：重视线条、平面表达
+- 绘画工具：笔墨纸砚
+
+### 中国画的各种分类术语
+- 画科/画类：人物、山水、花鸟
+  - 人物画的绘画题材：仕女、道释、肖像、风俗、历史故事画
+    - 仕女：捣练图，历史故事：步辇图
+  - 山水画的色墨关系：金碧、青绿、浅绛、水墨
+  - 花鸟画的绘画方法：重彩、淡菜、没骨、白描
+- 画式：写意、工笔、兼工兼写
+- 画种：史前绘画，民间绘画，画院绘画
+
+摹：最像；临：比较像；仿：吸收笔墨特征，重新创作
+### 韩熙载夜宴图
+- 五代十国顾闳中作品，现存宋摹本
+- 工笔重彩人物画
+- 谍画
+
+## 第二节：原始美术到魏晋绘画：为什么说魏晋时期是中国艺术“自觉”的时代？
+
+### 原始美术到魏晋绘画的发展
+- 绘画功能的自觉：向美而生
+- 画卷中人性的自觉：向内的深情，通过绘画来表现内心的情感
+- 技术的成熟：高古游丝描
+  - 常见于顾恺之的画作，线条提按变化不大，细而均匀，多为圆转曲线
+- 绘画审美的自觉：中国绘画理论的形成
+- 新型画家群体的出现：藏、品、绘、著
+### 其他知识
+- 中国传统绘画常以**线条**来表现
+- 山水画按照色墨关系可分为：金碧,青绿,**浅绛**,水墨。
+- 陕西半坡出土的人面鱼纹陶盆：用作**瓮葬棺**
+- 研究原始艺术的方法
+  - 结合文物史和考古史研究来探讨中国美术的起源
+  - 通过考察近代尚存的中外少数民族原始文化。
+  - **儿童心理学的研究方法**
+- 晋人的美感和艺术观，就大体而言，是以**老庄哲学**宇宙观为基础
+
 ### 魏晋南北朝艺术
 - 功能上的自觉：向艺术迈进
 - 技术的成熟：高古游丝描
 
-## 第四节
-唐代：人物画题材高峰
+---
 
-### 中晚唐至北宋绘画
+## 第三节：盛唐绘画——文化交融与艺术交汇
+唐代：人物画题材的高峰
+### 阎立本
+- 法度美：阎立本人物画的写实精神
+- 出身：绘画世家
+- 内容：重大历史事件
+- 铁线描
 
-“黄家富贵，徐熙野逸”
+### 吴道子
+- 天才美
+- 出身：少孤贫
+- 内容：佛鬼仙道
+- 兰叶描
+
+花山岩画
+
+《五牛图》唐 韩滉 现存最早的纸本中国画
+
+### 敦煌艺术
+- 敦煌石窟壁画最为成熟多元的时代：唐代
+- 敦煌艺术为何珍贵？
+  - 多元文化融合的产物
+  - 民间艺术最大的天然展览宫
+
+本生故事--描绘释迦摩尼成佛之前或“他”生中做的各种善事。
+经变故事--向信徒宣传佛经内容。
+佛、菩萨造像
+供养人像
+
+## 第四节：中晚唐至北宋绘画
+唐代：**人物画**题材高峰
+### 唐到五代的画风转变
+- 花鸟画的转变
+  - 五代花鸟：黄家富贵与徐熙野逸
+    - 黄家富贵：演化出工笔、重彩
+    - 徐熙野逸：演化出写意、水墨
+- 艺术家绘画风格形成的原因
+  - 个人志向
+  - “耳目所习”
+- 人物画的转变——隐退
+  - 簪花仕女图：染色技法的集大成
+  - 情绪转换：因为唐朝的衰落，人物画的题材也转变了
+  - 对人物画的兴趣转向对山水画的追求
+    - 富贵自足——闲适倦慵——山水问道
+- “水墨”的意义——运墨而五色具
+
+- 山水画
+  - 山水画的思想内核：以形媚道
+  - 目的：畅神
+  - 中晚唐至五代走向成熟
+    - 从金碧山水到水墨山水
+  - 为什么放弃绚烂的色彩
+    - 超越本能欲望
+    - 理念准备——笔墨技法的成熟
+  - 五代山水：荆浩、关仝、董源、巨然
+  - 皴：根据各种山石的不同地质结构和树木表皮状态，加以概括而创造出来的表现程式。
+
+### 北宋：山水画的巅峰时代
+- 范宽：溪山行旅图
+- 郭熙：早春图
+- 王希孟：千里江山图
+  - 如何将千里江山尽收眼底？
+    - 散点透视
+
+## 第五节 宋到元的发展——文人画的成熟
+### 北宋的绘画和教育
+1. 收藏鉴定：“秘阁”
+2. 专业绘画机构：翰林图画院
+3. 培养专门人才：“画学”
+### 南宋：唯美时代
+- 画面分为的转变：肃穆——轻快
+- 南北宋画风的显著差别——留白
+  - 历史原因：
+    - 北宋到南宋，绘画中心的迁移
+    - 中原到江南，画家视觉感受的变迁（各地的景致有所不同）
+  - 文化原因——“留白”成为中国画核心概念之一的根本原因
+    - 有无的概念
+  - 留白的功用
+    - 拓展心灵空间
+    - 为大面积题诗预留空间
+
+### 元代绘画——文人画的成熟
+- 文人画
+  - 关于“形似” —— 高人胜士寄兴写意者，慎不可以形似求之。
+  - 关于“为什么画”——画以适吾意而已
+  - 成因：宋代政治社会制度保障下文人的思想通过新的形式表现出来，发展出了脱离统治者控制的高度个性化的文人画艺术
+- 特点
+  - 绘画形式：更追求情绪表达，诗（题跋）、书（书法）、画（画作）的合一。
+    - 以“书画本来同”为要旨。
+  - 绘画不限于专业画家。复合型画家（文人画家、业余画家）群体成为中国画家世界的一大部分， 乃至成为绘画史关注的主流。
+### 元四家：吴镇，王蒙，倪瓒、黄公望
+  - 黄公望：代表作《富春山居图》
+### 文人画的演变
+唐 王维——被推为文人画肇始
+宋 苏轼——文人画观念准备
+元 赵孟頫——文人画实践的成熟
+元四家——文人画风格的多样化
+明 董其昌等——文人画理念梳理与总结
+
+### 各种画种的特点
+院体风格——偏工细，精致
+文人画风格——偏写意，个性
+民间绘画——偏民俗、绚丽
+
+## 第六节：明代绘画
+### 浙派：第一个以地域命名的画派
+- 以职业画家为主
+- 戴进
+- 北宗
+- 渐悟
+- 集成南宋画院
+
+### 吴门画派——（文人画家为主）
+- 沈周（开创）、文征明、仇英（职业画家）、唐寅
+- 南宗
+- 顿悟
+- 集成元四家，画风偏秀丽
+
+### 明中期绘画——苏州府
+- 经济发达
+- 文风昌盛
+
+- 明四家——沈周、文征明、仇英、唐寅
+
+### 徐渭
+
+1. 中国画中留白的启示
+中国画中的留白概念是指在绘画中留出空白区域，这是一种独特的审美方式，具有深刻的哲学意义。
+
+留白的启示可以从以下几个方面来看：
+
+**留白是一种对自然的尊重。**中国画讲究“天人合一”，认为人与自然是不可分割的。留白可以体现出画家对自然的敬畏之心，以及对自然之美的精准把握。
+中国画中的留白的图片在新窗口中打开
+zhuanlan.zhihu.com
+中国画中的留白
+**留白是一种对意境的追求。**中国画讲究“意在笔先”，认为画画不仅仅是描绘物象，更重要的是要表达作者的意境。留白可以营造出一种空灵、虚无的氛围，从而引发观者的思考。
+**留白是一种对审美的启发。**留白是一种独特的艺术表现形式，它可以帮助我们培养对美的欣赏力。留白可以让我们看到事物的本质，从而获得更深层次的审美感受。
+在日常生活中，我们可以从留白的概念中得到很多启发。例如，我们可以学会在工作和生活中留出空白，给自己留出思考和发展的空间。我们也可以学会在人际交往中留有余地，给他人留出尊重和理解。
+
+留白是一种智慧，它可以帮助我们更好地理解世界和生活。
+
+2. 中国画的时空表达与启示
+中国画对现实时空的描绘，主要体现在对物象的描绘上。中国画讲究“以形写神”，注重对物象的形态和神韵的表现。在描绘物象时，中国画家往往会对其周围的时空环境进行描绘，从而营造出一种真实、生动的画面效果。例如，在描绘山水画时，画家会将山、水、树木、草地等物象置于特定的时空环境之中，从而表现出山水的四季变化、昼夜之美。
+
+中国画对超越现实时空的表现，主要体现在对意境的追求上。中国画讲究“意在笔先”，认为画画不仅仅是描绘物象，更重要的是要表达作者的意境。在表达意境时，中国画家往往会借助留白、虚实、意象等艺术手法，营造出一种空灵、虚无的氛围，从而引发观者的思考和联想。例如，在描绘山水画时，画家可能会在画面中留出空白区域，从而营造出一种空灵、缥缈的意境。
+
+中国画中时空的表达具有以下几方面的启示：
+
+**启发我们对时空的理解。**中国画对时空的表达，既有对现实时空的描绘，也有对超越现实时空的表现。这启发我们要从多角度、多维度地理解时空，既要看到时空的现实性，也要看到时空的虚幻性。
+**启发我们对美的追求。**中国画讲究“意境”，意境是一种超越现实的时空境界。中国画对时空的表达，往往是通过意境来实现的。这启发我们要追求一种超越现实的美，一种既有现实感又有超现实感的美。
+**启发我们对艺术的创造。**中国画对时空的表达，具有独特的艺术特色。这启发我们要不断创新，探索新的艺术表现形式，从而创造出更加优秀的艺术作品。
+在日常生活中，我们可以从中国画中时空的表达中得到很多启发。例如，我们可以学会在工作和生活中留出空白，给自己留出思考和发展的空间。我们也可以学会在人际交往中留有余地，给他人留出尊重和理解。
+
+3. 中国画与西方绘画表现形式，观念之异同
+中国画与西方绘画在表现形式上最显著的差异是：中国画讲究“意在笔先”，注重对意境的表现，而西方绘画讲究“形似逼真”，注重对客观事物的描绘。
+
+中国画在表现形式上具有以下特点：
+
+**以线为骨，以墨为魂。**中国画的线条具有极强的表现力，可以用来表现物象的形态、神韵、意境等。
+**重视留白。**中国画讲究“留白如有画”，留白可以营造出一种空灵、虚无的氛围，从而引发观者的思考。
+**注重意境。**中国画讲究“意在笔先”，认为画画不仅仅是描绘物象，更重要的是要表达作者的意境。
+西方绘画在表现形式上具有以下特点：
+
+**注重透视、明暗、色彩等技法。**西方绘画借助透视、明暗、色彩等技法，可以逼真地再现客观事物的形态、色彩等。
+**重视写实。**西方绘画讲究“形似逼真”，认为画画应该尽可能地接近客观事物的真实。
+**注重写生。**西方绘画强调写生，认为写生是学习和提高绘画技法的重要途径。
+观念上的异同
+
+中国画与西方绘画在观念上也存在着明显的差异。中国画讲究“天人合一”，认为人与自然是不可分割的。西方绘画则认为人与自然是相互对立的。
+
+中国画在观念上具有以下特点：
+
+**注重意境。**中国画讲究“意在笔先”，认为画画不仅仅是描绘物象，更重要的是要表达作者的意境。
+**重视自然。**中国画讲究“天人合一”，认为人与自然是不可分割的。
+**注重写意。**中国画讲究“以形写神”，注重对物象的神韵和意境的表现。
+西方绘画在观念上具有以下特点：
+
+**注重写实。**西方绘画讲究“形似逼真”，认为画画应该尽可能地接近客观事物的真实。
+**重视理性。**西方绘画强调理性思维，认为艺术创作应该遵循一定的规律。
+**注重创新。**西方绘画强调创新，认为艺术应该不断地发展和变化。
+中国画与西方绘画的异同，反映了两种不同的文化和审美观念。中国画强调对意境的追求，注重自然和写意，具有浓郁的东方特色。西方绘画强调对客观事物的描绘，注重理性和写实，具有鲜明的西方特色。
+
+4. 选择一个喜爱的中国画家或作品，谈谈喜欢的原因（不要写生平）
+我最喜欢的古代中国画家是王维。王维是唐代著名的诗人、画家、音乐家，他是“诗佛”和“画圣”并称的两位大师之一。
+
+我喜欢王维的作品，主要有以下几个原因：
+
+**他对自然的热爱和理解。**王维一生都居住在山水之间，他对自然有着深刻的理解和热爱。他的作品中充满了对自然的细致观察和生动描绘，给人以强烈的视觉冲击力。
+**他对传统艺术的继承和创新。**王维是一位传统艺术的大师，他深受传统艺术的熏陶。但他又不拘泥于传统，不断进行创新。他的作品既继承了传统艺术的优良传统，又具有鲜明的个人风格。
+**他对艺术的追求和执着。**王维一生都在追求艺术的真谛，他对艺术有着执着的追求。他的作品充满了对艺术的热情和激情，给人以强烈的感染力。
+王维的山水画具有极强的写意性，他用简洁的笔墨，表现了山水的自然美和意境美。他的作品给人以清新、自然、空灵的感觉。
+
+例如，王维的《辋川图》是其代表作之一。这幅画描绘了辋川一带的自然风光，画面清新、自然、空灵。画中山峰雄伟、树木葱郁、溪水清澈、鸟语花香，给人以一种清幽、静谧的感觉。
+
+王维的作品不仅具有很高的艺术价值，而且具有很强的感染力。他的作品不仅受到了中国人民，也受到了全世界人民的喜爱。
+
+具体来说，我喜欢王维的《辋川图》这幅画，因为这幅画给人一种清新、自然、空灵的感觉。画中山峰雄伟、树木葱郁、溪水清澈、鸟语花香，给人以一种清幽、静谧的感觉。
+
+我认为这幅画之所以具有这种感觉，主要有以下几个原因：
+
+**画中的线条简洁流畅，具有很强的表现力。**画中山峰的线条用墨线勾勒，简洁流畅，具有很强的表现力。树木的线条用墨线勾勒，也具有很强的表现力。
+**画中的色彩清新淡雅，具有很强的感染力。**画中的山峰、树木、溪水等都用淡雅的色彩来表现，具有很强的感染力。
+**画中的意境空灵，具有很强的艺术感染力。**画中的山峰、树木、溪水等都具有一种空灵的意境，具有很强的艺术感染力。
+总而言之，我喜欢王维的《辋川图》这幅画，是因为这幅画具有很强的艺术感染力。它给人一种清新、自然、空灵的感觉，让人感到心旷神怡。
+
+5. 谈谈中国画的未来发展
+中国画有着悠久的历史和深厚的文化底蕴，是中华民族的瑰宝。在未来的发展中，中国画将呈现以下几个趋势：
+
+传承与创新并重
+中国画的发展离不开对传统的传承，但也要不断进行创新。传统的中国画具有鲜明的民族特色和艺术魅力，是需要传承和发扬的。但传统的中国画也存在着一些不足，比如过于注重技巧，缺乏创新精神等。因此，中国画的发展需要传承与创新并重，既要继承传统的优良传统，也要不断进行创新，探索新的艺术表现形式。
+
+国际化发展
+随着全球化的不断发展，中国画也将走向国际化。中国画具有独特的艺术魅力，具有广泛的传播力。因此，中国画的发展需要积极走向国际化，让更多的人了解和欣赏中国画。
+
+多元化发展
+随着社会的发展，人们的审美需求也越来越多元化。因此，中国画的发展也需要多元化发展，满足不同人群的审美需求。例如，可以发展具有现代气息的、具有地方特色的等多种类型的中国画。
+
+具体来说，中国画在未来的发展可以从以下几个方面着手：
+
+加强对传统中国画的传承和研究
+要加强对传统中国画的传承和研究，深入挖掘中国画的艺术内涵和价值。可以通过举办展览、出版书籍、开展学术研讨会等方式，让更多的人了解和学习传统中国画。
+
+鼓励中国画的创新发展
+要鼓励中国画的创新发展，探索新的艺术表现形式。可以通过举办比赛、开展艺术创作活动等方式，激发中国画家的创新精神。
+
+促进中国画的国际交流
+要促进中国画的国际交流，让更多的人了解和欣赏中国画。可以通过举办国际展览、开展艺术交流活动等方式，推广中国画。
+
+总而言之，中国画在未来的发展具有广阔的前景。通过传承与创新并重、国际化发展、多元化发展等举措，中国画将更加繁荣昌盛。
