--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -5,15 +5,49 @@
 翻了翻往年学长的经历，其中14级李鹏飞学长的经历似乎值得了解  
 > 本科专业：电气自动化 去向：约翰霍普金斯 方向：Robotics
 
-### 未来的一些计划？
+## 未来的一些计划？
 
 > 大致路线：以电气为基础，学计算机相关的内容（不妨...以机器人为导向？）
 
-#### 寒假
+### 寒假
 - ML-4360 计算机视觉需要学一下，之后打比赛需要用到
 - 确定好专业方向，联系实验室
   
-### 资料网站
+#### 资料网站
 [未央书院学习资料共享计划2.0](https://weyoung-learn.github.io/)  
 [酒井科协暑培 4.0：贵系漫游指南](https://summer23.net9.org/)  
 [SAST skill docs](https://docs.net9.org/notes/reader/)  
+
+### 23-24春夏
+
+> [本部分的参考链接](https://www.cc98.org/topic/5792116.md)
+
+总的来说，本学期的大方针是：在保持住学业成绩的基础上，在身体、科研竞赛、外语等方面有所发展。  
+实现这个方针的基础是，有足够的空余时间。23-24春夏的学分较少，在课业上的压力应该不会太大。
+#### 健身方面
+除了学习之外，健身实际上是最重要的一个部分。其意义并不止限于健身本身，也在于所谓`习惯的养成以及性格的塑造`。  
+具体而言，在2024年的余下310天（44周）里，应该要达成锻炼150天的目标（包括健身、跑步打卡等）。其中跑步打卡就会占据约100天。  
+分配到这个学期，就是每周3次跑步打卡+2次健身。
+
+#### 科研方面
+一个死命令：在3月15日之前必须进入实验室，不管为什么  
+从路径上看，分为两条：  
+第一条：成功进入爱班，并跟随导师团队进行科研工作  
+第二条：进爱班失败，自己申请实验室，进行科研工作  
+目前看过来比较感兴趣的老师（不定期更新）：徐文渊/陈艳姣  
+关于内容方面，可以问问gby
+
+#### 竞赛方面
+这部分的内容其实我也没有什么经验...如果有人可以带的话最好  
+- EEEIC
+  - 这部分内容相对来说没有那么硬核，路线也是清晰的，但问题是作为队长，可能不知道要怎么带队...
+  - 最好是接下来能在线下多聚几次
+  
+- 节能减排竞赛
+  - 这个就更麻烦了，完全不知道要怎么弄...可能是因为我们没学过相关的知识，感觉有点渺茫
+
+- 蒲公英创赛
+  - 问问ykj？
+  
+#### 英语方面
+说实话，考虑到家庭因素和社会因素，硕士期间出国的可能性不大。但是，考虑到交流等因素，英语还是要好好学的。大致会考一个雅思
