--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -22,6 +22,7 @@
 
 > [本部分的参考链接](https://www.cc98.org/topic/5792116.md)
 
+我常说一句话：“做事情不仅要想到现在的需求，还要考虑到接下来三年甚至五年的需求”。本学期就是为接下来几年做准备的学期。
 总的来说，本学期的大方针是：在保持住学业成绩的基础上，在身体、科研竞赛、外语等方面有所发展。  
 实现这个方针的基础是，有足够的空余时间。23-24春夏的学分较少，在课业上的压力应该不会太大。
 #### 健身方面
@@ -50,4 +51,4 @@
   - 问问ykj？
   
 #### 英语方面
-说实话，考虑到家庭因素和社会因素，硕士期间出国的可能性不大。但是，考虑到交流等因素，英语还是要好好学的。大致会考一个雅思
+说实话，考虑到家庭因素和社会因素，硕士期间出国的可能性不大。但是，考虑到交流等因素，英语还是要好好学的。大致会考一个雅思/TOFEL
