--- a/所思所想/每日一记.md
+++ b/所思所想/每日一记.md
@@ -1,2 +1,21 @@
 ## 9.28
 Chrome居然崩溃了...花了好久重装插件
+
+## 24.02.27
+### 如何进行管理
+技术上的限制 > 制度上的限制 > 情感上的约束
+
+### 如何保持做某事的动力
+以养成习惯为例。在所有时候都凭借一个人的力量是不可取的，因此需要有一些外部的力量来推动自己。也就是说，我们需要一些标准来推动自己
+外部力量分为人的和非人的力量，在这里我们只考虑人的力量。
+人的力量又分“广泛的”和“特有的”，广泛的力量，比如说学习的环境（氛围），决定了学习效果的下限，而特有的力量，比如说学习的伙伴，决定了学习效果的上限。
+
+### 关于英语的学习
+> 这是一个没有想清楚的话题
+竺老两问：
+1. 为什么要学英语？
+2. 平时要怎么学？如何使用英语?
+英语从长远来看，必然是有用的，但在短期来说并不如此。所以现在要思考为什么要学习英语。由于现在不一定会出国，所以学习英语的目的性没有那么强，时间久了，必然会导致学习的动力下降。
+此外，一个比较重要的问题是，如果平常没有用到的话，也很快会被遗忘。
+
+> 一个比较有意思的用途是：翻译wiki
