--- a/所思所想/关于专业与多样性.md
+++ b/所思所想/关于专业与多样性.md
@@ -52,3 +52,10 @@
   
 #### 英语方面
 说实话，考虑到家庭因素和社会因素，硕士期间出国的可能性不大。但是，考虑到交流等因素，英语还是要好好学的。大致会考一个雅思/TOFEL
+
+
+关于电气专业，一个假想：我觉得可以不限于这个专业名称，想做什么自己就去做什么（当然也把专业课学好）。一方面，假设之后准备去电网，只要研究生也在浙大电院，那就不需要笔试，所以额外学的东西也不会浪费。另一方面，如果之后不去电网，那么自己学的东西也会起到很大的作用
+
+关于暑研：想去的话只有两个时间段：今年暑假和明年寒假。明年暑假的话，一方面，学院里会有认知实习；另一方面，如果时间往后延的话，可能会影响保研。
+
+爱班的综合训练时长：一般2周
