--- a/所思所想/每日一记.md
+++ b/所思所想/每日一记.md
@@ -19,3 +19,30 @@ Chrome居然崩溃了...花了好久重装插件
 此外，一个比较重要的问题是，如果平常没有用到的话，也很快会被遗忘。
 
 > 一个比较有意思的用途是：翻译wiki
+
+
+## 24.03.04
+大致对第一周做一个复盘
+首先感受最明显的是课余时间的增加，相比上学期而言，本学期每周课时会少5节左右，学分也只有29分（其实不算少）同时也带来了时间的碎片化，因此，本周在安排计划时，常常出现了实际用时远大于计划用时的情况。可见，本周的效率并不算太高。此外，虽然本周的课时较少，但是用于学习的时间却并没有变多，这是不希望看到的。此外，刚刚起步的无纸化学习似乎也遇到了一些不适应的情况，比如说学习内容印象不深等。此外，之前安排的任务（比如说EEEIC竞赛的文稿工作和算法部分的工作、学长采访任务）也没有完成。
+结论：本学期实际上并不是想象中的那么清闲，如何高效率的利用时间，把ddl做完事接下来应该考虑的问题
+具体问题
+- 时间碎片化，效率不高
+  - 解决：尝试固定时间，比如说周一的某一天固定下来做某一件事
+- 学习印象不深，无纸化学习还需要适应
+  - 解决：无纸化学习的关键是笔记这一部分，如果说出现了不适应的情况，可以先只做笔记的电子化，就相当于说用平板代替笔记本
+- 之前安排的任务没有完成
+  - 解决；这部分的问题其实和第一、二个问题都有点相似。一方面，尝试固定时间，提高效率；另一方面，在时间规划方面也放缓变化的脚步，仿照上学期的安排
+  
+健身记录
+健身房三次，操场两次
+- 周一：肩
+- 周二：跑步打卡
+- 周四：走路打卡
+- 周五：背
+- 周日：腿
+
+接下来一周要做的事情
+EEEIC部分的任务（文稿、算法）
+学长采访的问题确定
+确定出国交流部分的规划
+确定未来的专业方向以及导师
